--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "homepage": "https://github.com/MoMeak9/img-service#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "1.4.5-lts.1",
-    "sharp": "^0.31.3",
-    "ts-node": "^10.9.1"
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -33,6 +33,7 @@
     "@types/node": "^18.15.3",
     "@types/sharp": "^0.31.1",
     "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
 }
