--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/sharp": "^0.31.1",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "ssh2": "^1.11.0"
   }
 }
