--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "deploy": "node deploy.js",
+    "test": "nodemon src/videoToGif.ts"
   },
   "files": [
     "dist",
@@ -28,19 +30,23 @@
   },
   "homepage": "https://github.com/MoMeak9/img-service#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "multer": "1.4.5-lts.1",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.3",
     "@types/sharp": "^0.31.1",
     "nodemon": "^2.0.21",
+    "ssh2": "^1.11.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
-    "ssh2": "^1.11.0"
+    "typescript": "^5.0.2"
   }
 }
